--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/pojecte-blog/assents/css/style.css">
+     <link href="/assents/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -11,7 +11,7 @@
      <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-success">
           <div class="container">
-            <a class="navbar-brand fw-bold text-warning" href="#">Dive Into Skills</a>
+            <a class="navbar-brand text-warning" href="#">Dive Into Skills</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMenu">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,11 +42,11 @@
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
-    <footer class="py-5 text-white bg-success">
+    <footer class="text-white bg-success">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-4">
-                    <h4 class="fw-bold text-warning">Dive Into Skills</h4>
+                    <h4 class="text-warning">Dive Into Skills</h4>
                     <p>
                         The latest articles and courses to help you upgrade your skills and learn
                         the latest trends. Master web Development with these amazing resources
