--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link href="/assents/css/style.css">
+     <link href="assents/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -68,7 +68,7 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <img src="/assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
+                    <img src="assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
                 </div>
             </div>
             <div class="text-center small">
