--- a/new.html
+++ b/new.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assents/css/style.css">
+    <link href="assents/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -36,7 +36,7 @@
                 </div>
                 <div class="card-group">
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -44,7 +44,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -52,7 +52,7 @@
                             </div>    
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -62,7 +62,7 @@
                 </div>
                  <div class="card-group">
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -70,7 +70,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -78,7 +78,7 @@
                             </div>    
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -88,7 +88,7 @@
                 </div>
                  <div class="card-group">
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -96,7 +96,7 @@
                             </div>
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -104,7 +104,7 @@
                             </div>    
                     </div>
                     <div class="card">
-                        <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                        <img src="assents/img/img.png" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                 <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -120,7 +120,7 @@
                         <div class="p-4 rounded-4 text-white bg-success">
                             <div class="row align-items-center">
                                 <div class="col-md-4 text-center">
-                                    <img src="/assents/img/img3.png" class="img-fluid" style="max-width: 250px;">
+                                    <img src="assents/img/img3.png" class="img-fluid" style="max-width: 250px;">
                                 </div>
                                 <div class="col-md-8">
                                     <h4 class="fw-bold text-warning">Subscribe to our Newsletter</h4>
@@ -165,7 +165,7 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <img src="/assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
+                    <img src="assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
                  </div>
                 </div>
                 <div class="text-center small">
