--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assents/css/style.css">
+    <link href="assents/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Document</title>
 </head>
@@ -35,7 +35,7 @@
                     </h1> 
                 </div> 
                 <div class="col-md-12 mt-4">
-                    <img src="/assents/img/img4.png" class="img-fluid" style="max-width: 1000px;">
+                    <img src="assents/img/img4.png" class="img-fluid" style="max-width: 1000px;">
                 </div>
                 <div class="row align-items-center">
                     <p class="mt-3">
@@ -54,7 +54,7 @@
                     </h3>
                 </div>   
                 <div class="col-md-12 mt-3">
-                    <img src="/assents/img/img5.png" class="img-fluid" style="max-width: 550px;">
+                    <img src="assents/img/img5.png" class="img-fluid" style="max-width: 550px;">
                 </div> 
                 <div class="row align-items-center">
                     <h3 class="mt-5">
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="card-group">
                         <div class="card">
-                             <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                             <img src="assents/img/img.png" class="card-img-top" alt="...">
                                  <div class="card-body">
                                      <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here </h6>
                                     <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -72,7 +72,7 @@
                                 </div>
                         </div>
                         <div class="card">
-                            <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                            <img src="assents/img/img.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                      <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here</h6>
                                     <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -80,7 +80,7 @@
                                  </div>
                          </div>
                          <div class="card">
-                            <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                            <img src="assents/img/img.png" class="card-img-top" alt="...">
                                  <div class="card-body">
                                       <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here</h6>
                                         <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -88,7 +88,7 @@
                                  </div>
                                 </div>
                                  <div class="card">
-                                    <img src="/assents/img/img.png" class="card-img-top" alt="...">
+                                    <img src="assents/img/img.png" class="card-img-top" alt="...">
                                         <div class="card-body">
                                           <h6 class="card-title">Title goes here Title goes <br> here Title goes here Title<br>goes here</h6>
                                             <p class="card-text">Lorem ipsum dolor sit ametbr,<br> consectetur adipiscing elit. Nunc<br> scelerisque tortor sit amet<br> condimentum porttitor. Integer<br> augue urna, volutpat in sapien a,<br> convallis commodo quam.</p>
@@ -126,7 +126,7 @@
                     </ul>
                 </div>
                 <div class="col-md-12 text-center">
-                    <img src="/assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
+                    <img src="assents/img/img5.png" class="img-fluid" style="max-width: 250px;">
                 </div>
             </div>
             <div class="text-center small">
